[package]
name = "stm32mp1"
version = "0.1.0"
authors = ["Javier Alvarez <javier.alvarez@allthingsembedded.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bare-metal = "0.2.5"
vcell = "0.1.2"

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
cortex-m = "0.6.4"
cortex-m-rt = { version = "0.6.13", optional = true }

[features]
rt = ["cortex-m-rt"]
